[nvim] neovim config via submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "vim"]
 	path = vim
 	url = https://github.com/tiklonglee/vim.git
+[submodule "nvim/.config/nvim"]
+	path = nvim/.config/nvim
+	url = https://github.com/tiklonglee/nvim.git
